@@ -30,7 +30,7 @@ public class StreamUtils {
         if (CollUtil.isEmpty(collection)) {
             return CollUtil.newArrayList();
         }
-        return collection.stream().filter(function).collect(Collectors.toList());
+        return collection.stream().filter(function).toList();
     }
 
     /**
@@ -70,7 +70,7 @@ public class StreamUtils {
         if (CollUtil.isEmpty(collection)) {
             return CollUtil.newArrayList();
         }
-        return collection.stream().sorted(comparing).collect(Collectors.toList());
+        return collection.stream().sorted(comparing).toList();
     }
 
     /**
@@ -188,7 +188,7 @@ public class StreamUtils {
             .stream()
             .map(function)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
